--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -30,7 +30,7 @@
     transition: all 1s ease-out;
 
     .container {
-      width: 100wv;
+      width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
