--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,6 +4,11 @@
   background-color: white;
   display: flex;
 
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .left {
     flex: 0.5;
     overflow: hidden;
@@ -18,9 +23,16 @@
       justify-content: center;
       float: right;
 
-      img {
+      @include mobile {
+        align-items: flex-start;
+      }
 
+      img {
         height: 90%;
+
+        @include mobile {
+          height: 50%;
+        }
       }
     }
 
@@ -39,9 +51,18 @@
       flex-direction: column;
       justify-content: center;
 
+      @include mobile {
+        padding-left: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 60px;
         margin: 10px 0;
+
+        @include mobile {
+          font-size: 40px;
+        }
       }
 
       h2 {
@@ -50,6 +71,10 @@
 
       h3 {
         font-size: 30px;
+
+        @include mobile {
+          font-size: 20px;
+        }
 
         span {
           font-size: inherit;
