--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -14,7 +14,18 @@
 
     img {
       height: 100%;
+
+      @include mobile {
+        // height: 50%;
+        width: 100%;
+      }
     }
+
+    @include mobile {
+      flex: 0.2;
+    }
+
+
   }
 
   .right {
@@ -24,22 +35,53 @@
     align-items: center;
     justify-content: center;
 
+    @include mobile {
+      height: 100%;
+    }
+
     h2 {
-      font-size: 30px;
+      font-size: 60px;
+      font-weight: 700;
+      margin-bottom: 70px;
+      color: $secColor;
+
+      @include mobile {
+        margin: 10px 0;
+        font-size: 30px;
+      }
     }
 
     form {
       width: 70%;
-      height: 70%;
+      // height: 70%;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
 
+      div {
+        display: flex;
+        flex-direction: column;
+        // align-items: center;
+        // justify-content: space-around;
+        margin: 10px 0;
+
+        @include mobile {
+          margin: 5px 0;
+        }
+
+      }
+
+      label {
+        margin: 10px 0;
+
+      }
+
       input {
         width: 300px;
         height: 30px;
         font-size: 14px;
+        margin-top: 0px;
 
         @include mobile {
           width: 200px;
@@ -67,6 +109,8 @@
         border-radius: 10px;
         font-weight: 500;
         cursor: pointer;
+        align-items: center;
+        justify-content: center;
 
         &:focus {
           outline: none;
@@ -76,6 +120,10 @@
       span {
         color: rgb(146, 241, 2);
       }
+    }
+
+    @include mobile {
+      flex: 0.8;
     }
   }
 }
