--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   h1 {
     font-size: 50px;
@@ -79,7 +80,86 @@
         }
       }
     }
+
+    .showInfos {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.507);
+      animation: popup .3s ease forwards;
+      transform-origin: center;
+      z-index: 1;
+
+      .infosContent {
+        position: relative;
+        top: 15%;
+        width: 600px;
+        margin: 0 auto;
+        color: white;
+        background: $mainColor;
+        border-radius: 40px;
+        padding: 2rem;
+        box-shadow: 0 10px 10px #333;
+        animation: popup .6s ease forwards;
+        transform: scale(0);
+        transform-origin: center;
+        justify-content: center;
+
+        @keyframes popup {
+          to {
+            transform: scale(1);
+          }
+        }
+
+        @include mobile {
+          width: 80% !important;
+          top: 5%;
+
+        }
+      }
+
+      .head {
+        display: flex;
+        justify-content: space-around;
+        margin: 1rem 0;
+      }
+
+      h2 {
+        text-align: left;
+        margin-bottom: 1rem;
+        color: crimson;
+      }
+
+      .button {
+        cursor: pointer;
+        color: white;
+        background-color: $secColor;
+        border-radius: 20px;
+        padding: 1rem;
+        transition: .2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        text-decoration: none;
+
+        &:hover {
+          background: crimson;
+        }
+      }
+
+      .text {
+        text-align: justify;
+        padding-bottom: 1rem;
+      }
+
+      .return {
+        margin: 1rem auto;
+        width: 200px;
+      }
+
+    }
   }
 }
-
-
