--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -74,6 +74,8 @@
             flex-direction: column;
             justify-content: space-between;
 
+            // justify-content: center;
+            // align-items: center;
             .imgContainer {
               width: 40px;
               height: 40px;
@@ -99,6 +101,7 @@
 
             h2 {
               font-size: 20px;
+              color: crimson;
 
               @include mobile {
                 font-size: 13px;
@@ -114,10 +117,15 @@
             }
 
             span {
-              font-size: 12px;
+              font-size: 14px;
               font-weight: 600;
               text-decoration: underline;
               cursor: pointer;
+
+              a {
+                text-decoration: none;
+                color: $secColor;
+              }
             }
 
           }
