--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -62,6 +62,8 @@
       h3 {
         position: absolute;
         font-size: 20px;
+        justify-content: center;
+        text-align: center;
       }
 
       img {
@@ -94,15 +96,15 @@
 
       .infosContent {
         position: relative;
-        top: 15%;
+        top: 10%;
         width: 600px;
         margin: 0 auto;
         color: white;
         background: $mainColor;
         border-radius: 40px;
-        padding: 2rem;
+        padding: 1.5rem;
         box-shadow: 0 10px 10px #333;
-        animation: popup .6s ease forwards;
+        animation: popup 1s ease forwards;
         transform: scale(0);
         transform-origin: center;
         justify-content: center;
@@ -117,6 +119,10 @@
           width: 80% !important;
           top: 5%;
 
+        }
+
+        img {
+          width: 100%;
         }
       }
 
@@ -137,7 +143,7 @@
         color: white;
         background-color: $secColor;
         border-radius: 20px;
-        padding: 1rem;
+        padding: 0.5rem;
         transition: .2s;
         display: flex;
         justify-content: center;
@@ -152,7 +158,17 @@
 
       .text {
         text-align: justify;
-        padding-bottom: 1rem;
+        // padding-bottom: 1rem;
+      }
+
+      .demo {
+        padding: .5rem 0;
+
+        a {
+          color: $secColor;
+          text-decoration: none;
+          font-weight: 500;
+        }
       }
 
       .return {
